deployment/manifests/home-assistant/hass-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`hass.c6.montesg.xyz`)"
      kind: Rule
      services:
        - kind: Service
          name: home-assistant
          namespace: home-automation
          passHostHeader: true
          port: 8123
  tls:
    certResolver: le
